# unitn-introduction_to_robotics

./: .gitignore  launch.sh  launch_cleaner.sh
src/: .gitignore
src/cleaning_robot/: CMakeLists.txt  README.md  package.xml  requirements.txt  run_all.sh
src/cleaning_robot/config/: cleaning_robot.rviz
src/cleaning_robot/launch/: display.launch
src/cleaning_robot/scripts/: controller.py  plot_results.py  robot_model.py  run_sim.py  trajectory.py
src/cleaning_robot/urdf/: assembly.urdf
src/giraffe_robot/: CMakeLists.txt  package.xml
src/giraffe_robot/config/: GiraffeRobot.rviz
src/giraffe_robot/launch/: display.launch
src/giraffe_robot/models/: chair2.stl
src/giraffe_robot/scripts/: kinematics.py  plot_results.py  ros_simulation.py  simulation.py  utils.py
src/giraffe_robot/urdf/: giraffe.urdf
